--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<h1> ✿ My To-Do List ✿</h1>
+<h1>  My To-Do List </h1>
 <input id="task" placeholder="Add a new task" />
 <button onclick="addTask()">Add</button>
 
